# Private-Systems-Final

./: .gitignore  README.md  analysis.py  at_risk.py  demo-find-quasi-ids.ipynb  pyproject.toml  requirements.txt
data/: brute_force_output.txt
find-quasi-ids/: brute_force.py  greedy.py  main.py  pyproject.toml  requirements.txt
find_quasi_ids/: README.md  pyproject.toml
find_quasi_ids/src/find_quasi_ids/: brute_force.py  greedy.py  main.py
output/: brute_force_distinct_ratio_k3.csv  greedy.csv  greedy_distinct_ratio_k2.csv  greedy_distinct_ratio_k4.csv  greedy_distinct_ratio_k5.csv  greedy_distinct_ratio_k6.csv
src/find_quasi_ids/: brute_force.py
